<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">TC</string>

    <!-- login start -->
    <string name="login">login</string>
    <string name="login_title">Login-Easemob voiceChatroom Demo</string>
    <string name="hint_username">Input username</string>
    <string name="hint_password">Input password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="username_or_pwd_is_wrong">username or password is wrong!</string>
    <string name="username_not_found">username not found!</string>
    <string name="confirmpassword">confirm password</string>
    <string name="register">register</string>
    <!-- login end -->

    <!-- settings start -->
    <string name="version">Version</string>
    <string name="speaker_number_limited_default">SpeakerNumberLimited default</string>
    <string name="allow_apply_for_interact_default">Allow apply for interact default</string>
    <string name="type_of_voice_chatroom">type of voiceChatroom</string>
    <string name="audio_quality_default">audio quality default</string>
    <string name="auto_agree_to_apply_as_speaker">auto agree to apply as speaker</string>
    <string name="automatically_turn_on_music">Automatically turn on music</string>


    <string name="btn_logout">Logout</string>
    <!-- settings end -->

    <!-- create voice chatroom start -->
    <string name="create_voice_chat_room">Create VoiceChatRoom</string>
    <string name="voice_chatroom_id">voiceChatRoomId</string>
    <string name="room_number_should_not_exceed_16_bits_at_most">Room numbers can be composed of letters and numbers, and Chinese is not supported. Room number should not exceed 16 bits。</string>
    <string name="password_should_not_exceed_16_bits_at_most">Passwords should not exceed 16 bits at most。</string>
    <string name="room_type_choice">Please select the voice chat room type.</string>
    <string name="create">Create</string>
    <string name="tip_plz_input_account_and_pwd">Please input account and password!</string>
    <string name="tip_plz_username_password_not_exceed_16_bits">User name and password should not exceed 16 bits!</string>
    <string name="tip_create_chat_room_failed">Create ChatRoom Failed, errorCode:%d, desc: %s</string>
    <!-- create voice chatroom end -->

    <!-- MainActivity start-->
    <string name="connect_conflict">The same account was loggedin in other device</string>
    <string name="em_user_remove">This user has been removed</string>
    <string name="user_forbidden">User is forbidden by server</string>
    <string name="title_room_list">Room</string>
    <string name="title_create_room">Create</string>
    <string name="title_settings">Settings</string>
    <!-- MainActivity end-->

    <!-- ChatActivity start -->
    <string name="no_more_messages">no more messages</string>
    <string name="joining">Joining.....</string>
    <string name="the_current_chat_room_destroyed">The current chat room has been dismissed</string>
    <string name="quiting_the_chat_room">You be kicked out off the chat room ...</string>
    <string name="user_be_kicked_for_offline">user be kicked for offline</string>
    <string name="alert_kicked_for_offline">You\'ve been kicked for offline, click to rejoin again.</string>
    <string name="rejoining_the_chat_room">Rejoining chat room</string>
    <string name="input_hint_say_your_heart">say me to your heart</string>
    <!-- ChatActivity end -->

    <!--Member list start -->
    <string name="title_member_list">Member list</string>
    <!--Member list end -->

    <!--EaseTipDialog start -->
    <string name="tip_ok">ok</string>
    <string name="tip_error">error</string>
    <!--EaseTipDialog end -->

    <string name="Is_landing">logining ……</string>
    <string name="Is_the_registered">Registering……</string>

    <string name="network_not_available">network not available</string>
    <string name="User_name_cannot_be_empty">username cannot be empty！</string>
    <string name="Password_cannot_be_empty">password cannot be empty！</string>
    <string name="Confirm_password_cannot_be_empty">confirm password cannot be empty!</string>
    <string name="Two_input_password">Entered password diff，please input again!</string>
    <string name="Login_failed">login failure!</string>
    <string name="Registered_successfully">register success!</string>
    <string name="Registered_failed">register fail!</string>
    <string name="network_anomalies">network anomalies, please check network!</string>
    <string name="User_already_exists">User already exists！</string>
    <string name="registration_failed_without_permission">Registration failed, without permission！</string>
    <string name="illegal_user_name">username is not legal</string>
    <string name="Registration_failed">registration failed</string>
    <string name="register_exceed_service_limit">has reached upper limit, please upgrade to the enterprise version.</string>
</resources>
