<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/black"
              android:orientation="vertical"
              android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical|start"
        android:text="@string/login_title"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        />

    <EditText
        android:id="@+id/et_username"
        style="@style/login_input_style"
        android:hint="@string/hint_username"
        />

    <EditText
        android:id="@+id/et_password"
        style="@style/login_input_style"
        android:hint="@string/hint_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        />

    <Button
        style="@style/login_button_style"
        android:onClick="login"
        android:text="@string/sign_in"
        />

    <Button
        style="@style/login_button_style"
        android:onClick="register"
        android:text="@string/sign_up"
        />


</LinearLayout>